// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SkillTooltip - Ulfsild's Contingency (Fight 11, Player 7) Edge Cases for Ulfsild's Contingency should handle Ulfsild's Contingency with no detected scripts 1`] = `
<div
  class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root u-fade-in skill-tooltip css-1uhcrne-MuiPaper-root-MuiCard-root"
>
  <div
    class="MuiCardContent-root css-bbbe4z-MuiCardContent-root"
  >
    <div
      class="MuiBox-root css-1so1mmd"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorSuccess css-nvz7be-MuiChip-root"
      >
        <span
          class="MuiChip-label css-19m61dl-MuiChip-label"
        >
          Active
        </span>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-eodq80-MuiTypography-root"
      >
        Scribing — Soul Magic
      </span>
    </div>
    <div
      class="MuiBox-root css-kxlf6x"
    >
      <div
        class="MuiStack-root css-1hyf038-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1nzo1ae"
        >
          <img
            alt="Ulfsild's Contingency"
            src="https://assets.rpglogs.com/img/eso/abilities/ability_grimoire_ulfsilds_contingency.png"
            style="width: 100%; height: 100%; display: block; object-fit: cover; border-radius: inherit;"
          />
        </div>
        <div
          class="MuiBox-root css-dj12vk"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-81b99o-MuiTypography-root"
          >
            Ulfsild's Contingency
          </h6>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-d0gigq"
    />
    <div
      class="MuiBox-root css-1r2f04i"
    >
      <div
        class="MuiBox-root css-phtmgf"
      >
        <div
          class="MuiBox-root css-13jj6ny"
        />
        <span
          class="MuiTypography-root MuiTypography-caption css-2kffpi-MuiTypography-root"
        >
          Grimoire: 
          Ulfsild's Contingency
        </span>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1n0e06i-MuiTypography-root"
        >
          Focus Script
        </span>
        <div
          class="MuiBox-root css-1kejaih"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1b8syan-MuiTypography-root"
          >
            Unknown
             (
            unknown
            )
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-1uwi21c-MuiTypography-root"
          >
            50
            % match confidence
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-d0gigq"
    />
    <p
      class="MuiTypography-root MuiTypography-body2 css-dboyas-MuiTypography-root"
    >
      A contingency effect.
    </p>
  </div>
</div>
`;

exports[`SkillTooltip - Ulfsild's Contingency (Fight 11, Player 7) Edge Cases for Ulfsild's Contingency should handle different focus script (Healing instead of Damage Shield) 1`] = `
<div
  class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root u-fade-in skill-tooltip css-1uhcrne-MuiPaper-root-MuiCard-root"
>
  <div
    class="MuiCardContent-root css-bbbe4z-MuiCardContent-root"
  >
    <div
      class="MuiBox-root css-1so1mmd"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorSuccess css-nvz7be-MuiChip-root"
      >
        <span
          class="MuiChip-label css-19m61dl-MuiChip-label"
        >
          Active
        </span>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-eodq80-MuiTypography-root"
      >
        Scribing — Soul Magic
      </span>
    </div>
    <div
      class="MuiBox-root css-kxlf6x"
    >
      <div
        class="MuiStack-root css-1hyf038-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1nzo1ae"
        >
          <img
            alt="Ulfsild's Contingency"
            src="https://assets.rpglogs.com/img/eso/abilities/ability_grimoire_ulfsilds_contingency.png"
            style="width: 100%; height: 100%; display: block; object-fit: cover; border-radius: inherit;"
          />
        </div>
        <div
          class="MuiBox-root css-dj12vk"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-81b99o-MuiTypography-root"
          >
            Ulfsild's Contingency
          </h6>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-d0gigq"
    />
    <div
      class="MuiBox-root css-1r2f04i"
    >
      <div
        class="MuiBox-root css-phtmgf"
      >
        <div
          class="MuiBox-root css-13jj6ny"
        />
        <span
          class="MuiTypography-root MuiTypography-caption css-2kffpi-MuiTypography-root"
        >
          Grimoire: 
          Ulfsild's Contingency
        </span>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1n0e06i-MuiTypography-root"
        >
          Focus Script
        </span>
        <div
          class="MuiBox-root css-1kejaih"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1b8syan-MuiTypography-root"
          >
            Healing Contingency
             (
            focus
            )
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-1uwi21c-MuiTypography-root"
          >
            95
            % match confidence
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1d2dt6l-MuiTypography-root"
        >
          Signature Script
        </span>
        <div
          class="MuiBox-root css-s3az8z"
        >
          <div
            class="MuiBox-root css-171onha"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-ldjl4n-MuiTypography-root"
            >
              Gladiator's Tenacity
            </span>
          </div>
          <span
            class="MuiTypography-root MuiTypography-caption css-1uwi21c-MuiTypography-root"
          >
            via Post-Cast Pattern Analysis · Consistent healing pattern detected
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-hkq2l3-MuiTypography-root"
        >
          Effects
        </span>
        <div
          class="MuiBox-root css-yi3mkw"
        >
          <div
            class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault css-i44q4n-MuiChip-root"
          >
            <span
              class="MuiChip-label css-19m61dl-MuiChip-label"
            >
              Tenacious Contingency (12)
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-d0gigq"
    />
    <p
      class="MuiTypography-root MuiTypography-body2 css-dboyas-MuiTypography-root"
    >
      A healing contingency effect.
    </p>
  </div>
</div>
`;

exports[`SkillTooltip - Ulfsild's Contingency (Fight 11, Player 7) Ulfsild's Contingency with Gladiator's Tenacity and Damage Shield should handle error state for Ulfsild's Contingency 1`] = `
<div
  class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root u-fade-in skill-tooltip css-1uhcrne-MuiPaper-root-MuiCard-root"
>
  <div
    class="MuiCardContent-root css-bbbe4z-MuiCardContent-root"
  >
    <div
      class="MuiBox-root css-1so1mmd"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorSuccess css-nvz7be-MuiChip-root"
      >
        <span
          class="MuiChip-label css-19m61dl-MuiChip-label"
        >
          Active
        </span>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-eodq80-MuiTypography-root"
      >
        Scribing — Soul Magic
      </span>
    </div>
    <div
      class="MuiBox-root css-kxlf6x"
    >
      <div
        class="MuiStack-root css-1hyf038-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1nzo1ae"
        >
          <img
            alt="Ulfsild's Contingency"
            src="https://assets.rpglogs.com/img/eso/abilities/ability_grimoire_ulfsilds_contingency.png"
            style="width: 100%; height: 100%; display: block; object-fit: cover; border-radius: inherit;"
          />
        </div>
        <div
          class="MuiBox-root css-dj12vk"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-81b99o-MuiTypography-root"
          >
            Ulfsild's Contingency
          </h6>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-d0gigq"
    />
    <p
      class="MuiTypography-root MuiTypography-body2 css-dboyas-MuiTypography-root"
    >
      Error loading scribing data.
    </p>
  </div>
</div>
`;

exports[`SkillTooltip - Ulfsild's Contingency (Fight 11, Player 7) Ulfsild's Contingency with Gladiator's Tenacity and Damage Shield should handle loading state for Ulfsild's Contingency 1`] = `
<div
  class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root u-fade-in skill-tooltip css-1uhcrne-MuiPaper-root-MuiCard-root"
>
  <div
    class="MuiCardContent-root css-bbbe4z-MuiCardContent-root"
  >
    <div
      class="MuiBox-root css-1so1mmd"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorSuccess css-nvz7be-MuiChip-root"
      >
        <span
          class="MuiChip-label css-19m61dl-MuiChip-label"
        >
          Active
        </span>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-eodq80-MuiTypography-root"
      >
        Scribing — Soul Magic
      </span>
    </div>
    <div
      class="MuiBox-root css-kxlf6x"
    >
      <div
        class="MuiStack-root css-1hyf038-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1nzo1ae"
        >
          <img
            alt="Ulfsild's Contingency"
            src="https://assets.rpglogs.com/img/eso/abilities/ability_grimoire_ulfsilds_contingency.png"
            style="width: 100%; height: 100%; display: block; object-fit: cover; border-radius: inherit;"
          />
        </div>
        <div
          class="MuiBox-root css-dj12vk"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-81b99o-MuiTypography-root"
          >
            Ulfsild's Contingency
          </h6>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-d0gigq"
    />
    <p
      class="MuiTypography-root MuiTypography-body2 css-dboyas-MuiTypography-root"
    >
      Loading scribing data...
    </p>
  </div>
</div>
`;

exports[`SkillTooltip - Ulfsild's Contingency (Fight 11, Player 7) Ulfsild's Contingency with Gladiator's Tenacity and Damage Shield should render Ulfsild's Contingency tooltip with Gladiator's Tenacity signature script 1`] = `
<div
  class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root u-fade-in skill-tooltip css-1uhcrne-MuiPaper-root-MuiCard-root"
>
  <div
    class="MuiCardContent-root css-bbbe4z-MuiCardContent-root"
  >
    <div
      class="MuiBox-root css-1so1mmd"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorSuccess css-nvz7be-MuiChip-root"
      >
        <span
          class="MuiChip-label css-19m61dl-MuiChip-label"
        >
          Active
        </span>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-eodq80-MuiTypography-root"
      >
        Scribing — Soul Magic
      </span>
    </div>
    <div
      class="MuiBox-root css-kxlf6x"
    >
      <div
        class="MuiStack-root css-1hyf038-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1nzo1ae"
        >
          <img
            alt="Ulfsild's Contingency"
            src="https://assets.rpglogs.com/img/eso/abilities/ability_grimoire_ulfsilds_contingency.png"
            style="width: 100%; height: 100%; display: block; object-fit: cover; border-radius: inherit;"
          />
        </div>
        <div
          class="MuiBox-root css-dj12vk"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-81b99o-MuiTypography-root"
          >
            Ulfsild's Contingency
          </h6>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-1r2f04i"
    >
      <div
        class="MuiBox-root css-1vonvk7"
      >
        <div
          class="MuiBox-root css-xyfvau"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1wv26v-MuiTypography-root"
          >
            Cost
          </span>
          <span
            class="MuiBox-root css-1dvct43"
          >
            4320 Magicka
          </span>
        </div>
        <div
          class="MuiBox-root css-xyfvau"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1wv26v-MuiTypography-root"
          >
            Target
          </span>
          <span
            class="MuiBox-root css-y079d7"
          >
            Self
          </span>
        </div>
        <div
          class="MuiBox-root css-xyfvau"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1wv26v-MuiTypography-root"
          >
            Duration
          </span>
          <span
            class="MuiBox-root css-s7km8x"
          >
            Conditional
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-d0gigq"
    />
    <div
      class="MuiBox-root css-1r2f04i"
    >
      <div
        class="MuiBox-root css-phtmgf"
      >
        <div
          class="MuiBox-root css-13jj6ny"
        />
        <span
          class="MuiTypography-root MuiTypography-caption css-2kffpi-MuiTypography-root"
        >
          Grimoire: 
          Ulfsild's Contingency
        </span>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1n0e06i-MuiTypography-root"
        >
          Focus Script
        </span>
        <div
          class="MuiBox-root css-1kejaih"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1b8syan-MuiTypography-root"
          >
            Healing Contingency
             (
            focus
            )
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1d2dt6l-MuiTypography-root"
        >
          Signature Script
        </span>
        <div
          class="MuiBox-root css-s3az8z"
        >
          <div
            class="MuiBox-root css-171onha"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-ldjl4n-MuiTypography-root"
            >
              Gladiator's Tenacity
            </span>
          </div>
          <span
            class="MuiTypography-root MuiTypography-caption css-1uwi21c-MuiTypography-root"
          >
            via Post-Cast Pattern Analysis · Analyzed 6 casts
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-hkq2l3-MuiTypography-root"
        >
          Effects
        </span>
        <div
          class="MuiBox-root css-yi3mkw"
        >
          <div
            class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault css-i44q4n-MuiChip-root"
          >
            <span
              class="MuiChip-label css-19m61dl-MuiChip-label"
            >
              Tenacious Contingency (24)
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault css-i44q4n-MuiChip-root"
          >
            <span
              class="MuiChip-label css-19m61dl-MuiChip-label"
            >
              Warding Contingency (24)
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault css-i44q4n-MuiChip-root"
          >
            <span
              class="MuiChip-label css-19m61dl-MuiChip-label"
            >
              Ulfsild's Contingency (5)
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-d0gigq"
    />
    <p
      class="MuiTypography-root MuiTypography-body2 css-dboyas-MuiTypography-root"
    >
      Create a magical contingency that activates when you take damage, applying a powerful effect. The nature of the contingency depends on the focus script selected.
    </p>
  </div>
</div>
`;

exports[`SkillTooltip - Ulfsild's Contingency (Fight 11, Player 7) Ulfsild's Contingency with Gladiator's Tenacity and Damage Shield should render Ulfsild's Contingency with only signature script (no focus detection) 1`] = `
<div
  class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root u-fade-in skill-tooltip css-1uhcrne-MuiPaper-root-MuiCard-root"
>
  <div
    class="MuiCardContent-root css-bbbe4z-MuiCardContent-root"
  >
    <div
      class="MuiBox-root css-1so1mmd"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorSuccess css-nvz7be-MuiChip-root"
      >
        <span
          class="MuiChip-label css-19m61dl-MuiChip-label"
        >
          Active
        </span>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-eodq80-MuiTypography-root"
      >
        Scribing — Soul Magic
      </span>
    </div>
    <div
      class="MuiBox-root css-kxlf6x"
    >
      <div
        class="MuiStack-root css-1hyf038-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1nzo1ae"
        >
          <img
            alt="Ulfsild's Contingency"
            src="https://assets.rpglogs.com/img/eso/abilities/ability_grimoire_ulfsilds_contingency.png"
            style="width: 100%; height: 100%; display: block; object-fit: cover; border-radius: inherit;"
          />
        </div>
        <div
          class="MuiBox-root css-dj12vk"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-81b99o-MuiTypography-root"
          >
            Ulfsild's Contingency
          </h6>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-1r2f04i"
    >
      <div
        class="MuiBox-root css-1vonvk7"
      >
        <div
          class="MuiBox-root css-xyfvau"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1wv26v-MuiTypography-root"
          >
            Cost
          </span>
          <span
            class="MuiBox-root css-1dvct43"
          >
            4320 Magicka
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-d0gigq"
    />
    <div
      class="MuiBox-root css-1r2f04i"
    >
      <div
        class="MuiBox-root css-phtmgf"
      >
        <div
          class="MuiBox-root css-13jj6ny"
        />
        <span
          class="MuiTypography-root MuiTypography-caption css-2kffpi-MuiTypography-root"
        >
          Grimoire: 
          Ulfsild's Contingency
        </span>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1n0e06i-MuiTypography-root"
        >
          Focus Script
        </span>
        <div
          class="MuiBox-root css-1kejaih"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-1b8syan-MuiTypography-root"
          >
            Gladiator's Tenacity
             (
            signature
            )
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1d2dt6l-MuiTypography-root"
        >
          Signature Script
        </span>
        <div
          class="MuiBox-root css-s3az8z"
        >
          <div
            class="MuiBox-root css-171onha"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-ldjl4n-MuiTypography-root"
            >
              Gladiator's Tenacity
            </span>
          </div>
          <span
            class="MuiTypography-root MuiTypography-caption css-1uwi21c-MuiTypography-root"
          >
            via Post-Cast Pattern Analysis · Analyzed 6 casts
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-hkq2l3-MuiTypography-root"
        >
          Effects
        </span>
        <div
          class="MuiBox-root css-yi3mkw"
        >
          <div
            class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault css-i44q4n-MuiChip-root"
          >
            <span
              class="MuiChip-label css-19m61dl-MuiChip-label"
            >
              Tenacious Contingency (24)
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-d0gigq"
    />
    <p
      class="MuiTypography-root MuiTypography-body2 css-dboyas-MuiTypography-root"
    >
      A contingency effect that activates under certain conditions.
    </p>
  </div>
</div>
`;
